--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,8 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+production:
+  sendgrid_username: Musa-Abdillah
+  sendgrid_password: tOOr%powerr99
+
