--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -18,10 +18,7 @@ test:
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
-#production:
-  #secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-
 production:
-  sendgrid_username: Musa-Abdillah
-  sendgrid_password: tOOr%powerr99
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
 
